[gd_scene load_steps=11 format=2]

[ext_resource path="res://BackgroundGenerator/BackgroundGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/SchemeSelectButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://GUI/slkscre.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GUI/FontSmall.tres" type="DynamicFont" id=6]
[ext_resource path="res://GUI/FontSmaller.tres" type="DynamicFont" id=7]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=2]
size = 17
extra_spacing_top = 4
extra_spacing_bottom = 2
extra_spacing_char = -3
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.305882, 0.286275, 0.372549, 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 1000 )
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 1
render_target_v_flip = true
gui_snap_controls_to_pixels = false

[node name="BackgroundGenerator" parent="Viewport" instance=ExtResource( 1 )]

[node name="Camera1" type="Camera2D" parent="Viewport"]
offset = Vector2( 50, 50 )
current = true
zoom = Vector2( 0.1, 0.1 )

[node name="Camera2" type="Camera2D" parent="Viewport"]
anchor_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
margin_left = 600.0
margin_right = 1062.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )

[node name="Settings" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="HBoxContainer/ColorRect/Settings"]
margin_right = 442.0
margin_bottom = 26.0
text = "new image"

[node name="Spacer" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 28.0
margin_right = 442.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 35.0
margin_right = 442.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/Settings/HBoxContainer"]
margin_right = 219.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "pixels:"

[node name="pixelsSet" type="SpinBox" parent="HBoxContainer/ColorRect/Settings/HBoxContainer"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 26.0
size_flags_horizontal = 3
min_value = 100.0
max_value = 1000.0
value = 200.0

[node name="Spacer2" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 63.0
margin_right = 442.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 5 )

[node name="Label2" type="Label" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 70.0
margin_right = 442.0
margin_bottom = 96.0
text = "colorscheme:"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 98.0
margin_right = 442.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/Settings/ScrollContainer"]
margin_right = 430.0
margin_bottom = 356.0
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="Button" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 430.0
custom_fonts/font = ExtResource( 6 )
text = "NYX8"
colorscheme = PoolColorArray( 0.00392157, 0.0352941, 0.0588235, 1, 0.0313726, 0.0784314, 0.117647, 1, 0.0588235, 0.164706, 0.247059, 1, 0.12549, 0.223529, 0.309804, 1, 0.305882, 0.286275, 0.372549, 1, 0.505882, 0.384314, 0.443137, 1, 0.6, 0.458824, 0.466667, 1, 0.764706, 0.639216, 0.541176, 1, 0.964706, 0.839216, 0.741176, 1 )

[node name="Button4" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 430.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 6 )
text = "AMMO-8"
colorscheme = PoolColorArray( 0, 0.0392157, 0.0117647, 1, 0.0156863, 0.0470588, 0.0235294, 1, 0.0666667, 0.137255, 0.0941176, 1, 0.117647, 0.227451, 0.160784, 1, 0.188235, 0.364706, 0.258824, 1, 0.301961, 0.501961, 0.380392, 1, 0.537255, 0.635294, 0.341176, 1, 0.745098, 0.862745, 0.498039, 1, 0.933333, 1, 0.8, 1 )

[node name="Button9" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 56.0
margin_right = 430.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "winter wonderland"
colorscheme = PoolColorArray( 0.0666667, 0.0941176, 0.215686, 1, 0.12549, 0.156863, 0.305882, 1, 0.172549, 0.290196, 0.470588, 1, 0.219608, 0.458824, 0.631373, 1, 0.545098, 0.792157, 0.866667, 1, 0.45098, 0.552941, 0.615686, 1, 0.654902, 0.737255, 0.788235, 1, 0.839216, 0.882353, 0.913725, 1, 1, 1, 1, 1 )

[node name="Button11" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 82.0
margin_right = 430.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 6 )
text = "borkfest"
colorscheme = PoolColorArray( 0.0901961, 0.0901961, 0.0666667, 1, 0.12549, 0.133333, 0.0823529, 1, 0.227451, 0.156863, 0.00784314, 1, 0.588235, 0.235294, 0.235294, 1, 0.792157, 0.352941, 0.180392, 1, 1, 0.470588, 0.192157, 1, 0.952941, 0.6, 0.286275, 1, 0.921569, 0.760784, 0.458824, 1, 0.87451, 0.843137, 0.521569, 1 )

[node name="Button10" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 110.0
margin_right = 430.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "submerged chimera"
colorscheme = PoolColorArray( 0.0196078, 0.00784314, 0.0980392, 1, 0.0705882, 0.0588235, 0.156863, 1, 0.180392, 0.117647, 0.360784, 1, 0.427451, 0.258824, 0.6, 1, 0.52549, 0.137255, 0.682353, 1, 0.870588, 0.223529, 0.913725, 1, 0.968627, 0.572549, 0.894118, 1, 1, 0.823529, 0.870588, 1, 0.968627, 0.980392, 0.917647, 1 )

[node name="Button6" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 136.0
margin_right = 430.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 6 )
text = "DREAMSCAPE8"
colorscheme = PoolColorArray( 0.129412, 0.0980392, 0.129412, 1, 0.329412, 0.2, 0.266667, 1, 0.545098, 0.25098, 0.286275, 1, 0.682353, 0.415686, 0.278431, 1, 0.792157, 0.627451, 0.352941, 1, 0.317647, 0.321569, 0.384314, 1, 0.388235, 0.470588, 0.490196, 1, 0.556863, 0.627451, 0.568627, 1, 0.788235, 0.8, 0.631373, 1 )

[node name="Button8" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 164.0
margin_right = 430.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 6 )
text = "coffee"
colorscheme = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0.0392157, 0.0392157, 0.0392157, 1, 0.0980392, 0.0980392, 0.0980392, 1, 0.32549, 0.243137, 0.176471, 1, 0.635294, 0.439216, 0.207843, 1, 0.721569, 0.545098, 0.290196, 1, 0.866667, 0.792157, 0.490196, 1, 0.984314, 0.976471, 0.937255, 1 )

[node name="Button5" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 192.0
margin_right = 430.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 6 )
text = "FUNKYFUTURE8"
colorscheme = PoolColorArray( 0.0705882, 0.0313726, 0.14902, 1, 0.168627, 0.0588235, 0.329412, 1, 0.670588, 0.121569, 0.396078, 1, 1, 0.309804, 0.411765, 1, 1, 0.505882, 0.258824, 1, 1, 0.854902, 0.270588, 1, 0.2, 0.407843, 0.862745, 1, 0.286275, 0.905882, 0.92549, 1, 1, 0.968627, 0.972549, 1 )

[node name="Button3" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 220.0
margin_right = 430.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 6 )
text = "POLLEN8"
colorscheme = PoolColorArray( 0.180392, 0.141176, 0.164706, 1, 0.45098, 0.27451, 0.298039, 1, 0.670588, 0.337255, 0.458824, 1, 0.933333, 0.415686, 0.486275, 1, 1, 0.654902, 0.647059, 1, 0.203922, 0.67451, 0.729412, 1, 0.447059, 0.862745, 0.733333, 1, 1, 0.878431, 0.494118, 1, 1, 0.905882, 0.839216, 1 )

[node name="Button7" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 248.0
margin_right = 430.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 6 )
text = "Rust gold 8"
colorscheme = PoolColorArray( 0.0313726, 0.0784314, 0.117647, 1, 0.12549, 0.12549, 0.12549, 1, 0.223529, 0.223529, 0.223529, 1, 0.447059, 0.34902, 0.337255, 1, 0.733333, 0.498039, 0.341176, 1, 0.2, 0.109804, 0.0901961, 1, 0.337255, 0.196078, 0.14902, 1, 0.67451, 0.419608, 0.14902, 1, 0.964706, 0.803922, 0.14902, 1 )

[node name="Button2" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 276.0
margin_right = 430.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 6 )
text = "SLSO8"
colorscheme = PoolColorArray( 0, 0.0901961, 0.168627, 1, 0.0509804, 0.168627, 0.270588, 1, 0.12549, 0.235294, 0.337255, 1, 0.329412, 0.305882, 0.407843, 1, 0.552941, 0.411765, 0.478431, 1, 0.815686, 0.505882, 0.34902, 1, 1, 0.666667, 0.368627, 1, 1, 0.831373, 0.639216, 1, 1, 0.92549, 0.839216, 1 )

[node name="Button12" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 304.0
margin_right = 430.0
margin_bottom = 328.0
custom_fonts/font = ExtResource( 7 )
text = "Goosebumps gold"
colorscheme = PoolColorArray( 0, 0.00784314, 0.0156863, 1, 0.129412, 0.0980392, 0.109804, 1, 0.215686, 0.137255, 0.396078, 1, 0.25098, 0.294118, 0.466667, 1, 0.352941, 0.521569, 0.643137, 1, 0.580392, 0.0784314, 0.203922, 1, 0.784314, 0.129412, 0.0313726, 1, 0.890196, 0.364706, 0.0313726, 1, 0.819608, 0.623529, 0.133333, 1 )

[node name="Button13" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 330.0
margin_right = 430.0
margin_bottom = 356.0
custom_fonts/font = ExtResource( 6 )
text = "OIL6"
colorscheme = PoolColorArray( 0.0228, 0.0228, 0.04, 1, 0.0666667, 0.0666667, 0.121569, 1, 0.113725, 0.113725, 0.2, 1, 0.152941, 0.152941, 0.266667, 1, 0.286275, 0.301961, 0.494118, 1, 0.545098, 0.427451, 0.611765, 1, 0.776471, 0.623529, 0.647059, 1, 0.94902, 0.827451, 0.670588, 1, 0.984314, 0.960784, 0.937255, 1 )

[node name="Spacer3" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 452.0
margin_right = 442.0
margin_bottom = 457.0
rect_min_size = Vector2( 0, 5 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 459.0
margin_right = 442.0
margin_bottom = 545.0
columns = 2

[node name="EnableStars" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_right = 219.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "stars"

[node name="EnableDust" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "dust"

[node name="EnableNebulae" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_top = 30.0
margin_right = 219.0
margin_bottom = 56.0
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "nebulae"

[node name="EnablePlanets" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 223.0
margin_top = 30.0
margin_right = 442.0
margin_bottom = 56.0
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "planets"

[node name="EnableTile" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_top = 60.0
margin_right = 219.0
margin_bottom = 86.0
custom_styles/hover_pressed = SubResource( 3 )
text = "tile"

[node name="EnableReduceBackground" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 223.0
margin_top = 60.0
margin_right = 442.0
margin_bottom = 86.0
custom_styles/hover_pressed = SubResource( 3 )
text = "darken"

[node name="Spacer4" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 547.0
margin_right = 442.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 5 )

[node name="ExportButton" type="Button" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 554.0
margin_right = 442.0
margin_bottom = 580.0
text = "export"

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/ColorRect/Settings/HBoxContainer/pixelsSet" to="." method="_on_pixelsSet_value_changed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableStars" to="." method="_on_EnableStars_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableDust" to="." method="_on_EnableDust_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableNebulae" to="." method="_on_EnableNebulae_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnablePlanets" to="." method="_on_EnablePlanets_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableTile" to="." method="_on_EnableTile_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableReduceBackground" to="." method="_on_EnableReduceBackground_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
